--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
+ADMIN_USER=admin
+ADMIN_PASSWORD=123456
+ADMIN_Name=Administrator
+PERMISSION_LENGTH=20
+
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
