完成分类列表

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,17 @@ ADMIN_PASSWORD=123456
 ADMIN_Name=Administrator
 PERMISSION_LENGTH=20
 
+TOKEN_LENGTH=60
+TOKEN_LIFE_TIME=129600
+TOKEN_UPDATE_TIME=720
+
+CATE_NAME_LENGTH=50
+CATE_DSCR_LENGTH=100
+
+ARTICLE_TITLE_LENGTH=255
+ARTICLE_CONTENT_LENGTH=64000
+ARTICLE_KEYWORD_LENGTH=255
+
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
