--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,10 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
+        "gregwar/captcha": "1.*",
+        "html2text/html2text": "^4.2",
         "laravel/framework": "5.6.*",
-        "laravel/tinker": "^1.0",
-        "gregwar/captcha": "1.*"
+        "laravel/tinker": "^1.0"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
