--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_URL=http://cysite.test
+APP_URL=http://localhost.test
 
 ADMIN_USER=admin
 ADMIN_PASSWORD=123456
@@ -16,10 +16,11 @@ ARTICLE_TITLE_LENGTH=255
 ARTICLE_CONTENT_LENGTH=64000
 ARTICLE_KEYWORD_LENGTH=255
 
+APP_DEBUG=false
+
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
-APP_DEBUG=true
 
 LOG_CHANNEL=stack
 
