--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,10 @@ ARTICLE_TITLE_LENGTH=255
 ARTICLE_CONTENT_LENGTH=64000
 ARTICLE_KEYWORD_LENGTH=255
 
+SETTING_NAME_LENGTH=50
+SETTING_OPTION_LENGTH=100
+SETTING_FILE_PATH="/Model/setting.php"
+
 APP_DEBUG=false
 
 APP_NAME=Laravel
