添加文章时更新文章缓存

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,8 @@ CATE_DSCR_LENGTH=100
 ARTICLE_TITLE_LENGTH=255
 ARTICLE_CONTENT_LENGTH=64000
 ARTICLE_KEYWORD_LENGTH=255
+ARTICLE_CACHE_SIZE=10
+ARTICLE_CACHE_PATH="/Model/ArticleCache.php"
 
 SETTING_NAME_LENGTH=50
 SETTING_OPTION_LENGTH=100
