--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,7 @@ ARTICLE_CACHE_PATH="/Model/ArticleCache.php"
 SETTING_NAME_LENGTH=50
 SETTING_OPTION_LENGTH=100
 SETTING_FILE_PATH="/Model/setting.php"
+SETTING_PUBLISH_PATH="/Model/publish.php"
 
 APP_DEBUG=false
 
